tests/snapshots/run_wpt_conformance__coreml_lesserOrEqual_float16_broadcast_4D_to_5D.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
lesser_or_equal.https.any.js lesserOrEqual float16 broadcast 4D to 5D, coreml
 lesser_or_equal :: lesserOrEqual float16 broadcast 4D to 5D: index 0: actual=0 expected=1 tolerance=0
  inputs: inputA: [0, 1, 2, 8, 0, 255]; inputB: [255, 0, 1, 8]
  expected output: [1, 1, 1, 1, 0, 0, 0, 1, 0, 1 ...] (len=12)
  actual output: [0, 0, 128, 63, 0, 0, 128, 63, 0, 0 ...] (len=12)
  expected output full nd:
[1, 1, 1, 1, 0, 0, 0, 1, 0, 1, ...] (len=12, shape=[1, 2, 2, 1, 3])
  actual output full nd:
[0, 0, 128, 63, 0, 0, 128, 63, 0, 0, ...] (len=12, shape=[1, 2, 2, 1, 3])

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: f16[2, 1, 1, 3];
    inputB: f16[1, 2, 2, 1, 1];
  }

  nodes {
    [output] = lesserOrEqual(inputA, inputB, label="");
  }

  outputs { output; }
}
