tests/snapshots/run_wpt_conformance__coreml_lesserOrEqual_float32_0D_scalar.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
lesser_or_equal.https.any.js lesserOrEqual float32 0D scalar, coreml
 lesser_or_equal :: lesserOrEqual float32 0D scalar: index 0: actual=0 expected=1 tolerance=0
  inputs: inputA: [-6.978766441345215]; inputB: [6.613064765930176]
  expected output: [1]
  actual output: [0]

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: f32[];
    inputB: f32[];
  }

  nodes {
    [output] = lesserOrEqual(inputA, inputB, label="");
  }

  outputs { output; }
}
