tests/snapshots/run_wpt_conformance__coreml_lesserOrEqual_float32_1D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
lesser_or_equal.https.any.js lesserOrEqual float32 1D tensors, coreml
 lesser_or_equal :: lesserOrEqual float32 1D tensors: index 0: actual=0 expected=1 tolerance=0
  inputs: inputA: [-8.284008979797363, -3.219264507293701, -6.543179988861084, -0.540285050868988, -5.413843631744385, 5.583743095397949, 1.50178062915802, 6.5922441482543945, -9.92548656463623, -7.134799957275391, -4.915772914886475, -9.137166976928713, 9.40368366241455, -9.831502914428713, -2.0123181343078613, -6.597689628601074, -8.26932144165039, 8.281030654907227, 1.64528226852417, -1.4862726926803589, -4.998753547668457, -0.920993447303772, -9.434256553649902, 9.813238143920898]; inputB: [5.498841285705566, 1.766266107559204, -2.815573215484619, -6.048312187194824, 9.497536659240724, -2.101574659347534, -4.079037189483643, 5.314040184020996, 0.03871455416083336, -0.30728286504745483, 4.97542667388916, 3.462601661682129, 8.605685234069824, 1.5140480995178225, 2.0090959072113037, -0.3105867803096771, -4.244836330413818, -3.5506834983825684, -2.595328569412231, -4.9998064041137695, 3.118950605392456, 9.705141067504885, 9.54673957824707, -6.189505577087402]
  expected output: [1, 1, 1, 0, 1, 0, 0, 0, 1, 1 ...] (len=24)
  actual output: [0, 0, 128, 63, 0, 0, 128, 63, 0, 0 ...] (len=24)
  expected output full nd:
[1, 1, 1, 0, 1, 0, 0, 0, 1, 1, ...] (len=24, shape=[24])
  actual output full nd:
[0, 0, 128, 63, 0, 0, 128, 63, 0, 0, ...] (len=24, shape=[24])

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: f32[24];
    inputB: f32[24];
  }

  nodes {
    [output] = lesserOrEqual(inputA, inputB, label="");
  }

  outputs { output; }
}
